# Algorithms

./: .gitignore  TO-DO.md  pyproject.toml  readme.md  setup.ps1  setup.sh
Arrays/: 1460 Make Two Arrays Equal by Reversing Subarrays.py  238 Product of Array Except Self.py  283 Move Zeroes.py  726 Number of Atoms.py  752 Open the Lock.py  88 Merge Sorted Array.py  longest_sequence_128.py  remove_duplicates_28.py  valid_sudoku.py
Backtracking/: 131 Palindrome Partitioning.py  17 Letter Combinations of a Phone Number.py  1992 Find All Groups of Farmland.py  212 Word Search II.py  22 Generate Parentheses.py  39 Combination Sum.py  40. Combination Sum II.py  46 Permutations.py  47 Permutations II.py  78 Subsets.py  79 Word Search.py  90 Subsets II.py
Binary Search/: 270 Closest Binary Search Tree Value.py  33 Search in Rotated Sorted Array.py  binary_search_704.py  kugo.py  sqrt.py
Binary Tree/: 100_same_tree.py  101_symmetric_tree.py  102 Binary Tree Level Order Traversal.py  103 Binary Tree Zigzag Level Order Traversal.py  107 Binary Tree Level Order Traversal II.py  110_balanced_binary_tree.py  111_minimum_depth_of_binary_tree.py  112_path_sum.py  113_path_sum_II.py  116 Populating Next Right Pointers in Each Node.py  124 Binary Tree Maximum Path Sum.py  129 Sum Root to Leaf Numbers.py  1448 Count Good Nodes in Binary Tree.py  144_binary_tree_preorder_traversal.py  145_binary_tree_postorder_traversal.py  199 Binary Tree Right Side View.py  222_count_complete_tree_nodes.py  226_invert_binary_tree.py  230 Kth Smallest Element in a BST.py  257_binary_tree_paths.py  (+20 more)
(+98 files in other folders)
