[project]
name = "Algorithms"
version = "0.1.0"
description = "Project for learning algorithms"
authors = [{ name = "Amadeusz Drożdż", email = "drozdz.amadeusz@gmail.com" }]

dependencies = ['termcolor']

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.flit.module]
name = "_utils"
